--- a/app/views/organisations/org_candidates.html.haml
+++ b/app/views/organisations/org_candidates.html.haml
@@ -2,13 +2,13 @@
   .row.election_overview
     .col-md-8.col-md-offset-2.text-left
       .row
-        .col-md-8
+        .col-md-9
           %h1 Candidate Overview
           
-        .col-md-4
+        .col-md-3
           - if current_organisation.is_admin?(current_user)
             %button.pull-right.btn.btn-default.show_election_button{:type => "button"}= link_to 'New candidate', new_organisation_election_path(current_organisation)
-      %p.lead= "This is an overview of all of the candidates in the <em>#{link_to current_organisation.name, edit_organisation_path(current_organisation)}</em> organisation.".html_safe
+      %p.lead= "This is an overview of all of the candidates in the <em>#{link_to current_organisation.name, edit_organisation_path(current_organisation)}</em> organisation. You can create a new candidate from an election.".html_safe
   %hr.col-md-10.col-md-offset-1
   %hr
   - @candidates.each do |candidate|
