--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -18,7 +18,7 @@
           - if current_organisation.is_admin?(current_user)
             %li.dropdown
               %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
-                = "#{current_organisation.name}"
+                Organisation
                 %span.caret
               %ul.dropdown-menu
                 %li= link_to 'Manage Organisation', organisation_path(current_organisation)
