Removed duplicate skeleton grid classes

--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -2,21 +2,21 @@
   .section.hero
     .container
       .row
-        .column
+        .col-sm-6.col-sm-offset-3
           %h4.hero-heading Run an election online, how you want it. Voting restricted on emails, and much more.
           %a.button.button-primary{:href => "http://ballot-app.herokuapp.com/users/sign_up"} Sign up now
   .section.values
     .container
       .row
-        .one-third.column.value
+        .col-sm-4.value
           %h2.value-multiplier Free
           %h5.value-heading Free to use
           %p.value-description With as many users and candidates as you want
-        .one-third.column.value
+        .col-sm-4.value
           %h2.value-multiplier Easy
           %h5.value-heading Easy elections online
           %p.value-description We have a simple and intuitive online way to create and run an election
-        .one-third.column.value
+        .col-sm-4.value
           %h2.value-multiplier Control
           %h5.value-heading Control your election
           %p.value-description Control who can vote, when they can vote, and view the results in real time.
