Small style update to election page

--- a/app/assets/stylesheets/elections.scss
+++ b/app/assets/stylesheets/elections.scss
@@ -27,7 +27,7 @@
   bottom: 0;
 }
 
-.col-md-4.candidate_block {
+.col-sm-4.candidate_block {
   position: relative;
-  min-height: 460px;
+  min-height: 380px;
 }
