Cannot vote after election has finished

--- a/app/views/elections/show.html.haml
+++ b/app/views/elections/show.html.haml
@@ -26,12 +26,13 @@
               %h3= candidate.name
               %p.candidate_description= truncate(candidate.description, length: 150)
               %p.candidate_full_description.hide= candidate.description
-              - if @vote
-                .voting_block
-                  %span.button-checkbox
-                    %button.btn{type: "button", class: @vote.candidate_id == candidate.id ? "btn-success active" : "btn-default", data: {color: "success", id: candidate.id, state: @vote.candidate_id == candidate.id ? "on" : "off", url: organisation_election_vote_path(current_organisation, @election, @vote, candidate_id: candidate.id)}}= @vote.candidate_id == candidate.id ? "Voted" : "Vote"
-              - else
-                .voting_block
-                  %span.button-checkbox
-                    %button.btn{type: "button", class: "btn-default", data: {color: "success", id: candidate.id, state: "off", url: organisation_election_votes_path(current_organisation, @election, candidate_id: candidate.id)}}= "Vote"
+              - unless @election.finished?
+                - if @vote
+                  .voting_block
+                    %span.button-checkbox
+                      %button.btn{type: "button", class: @vote.candidate_id == candidate.id ? "btn-success active" : "btn-default", data: {color: "success", id: candidate.id, state: @vote.candidate_id == candidate.id ? "on" : "off", url: organisation_election_vote_path(current_organisation, @election, @vote, candidate_id: candidate.id)}}= @vote.candidate_id == candidate.id ? "Voted" : "Vote"
+                - else
+                  .voting_block
+                    %span.button-checkbox
+                      %button.btn{type: "button", class: "btn-default", data: {color: "success", id: candidate.id, state: "off", url: organisation_election_votes_path(current_organisation, @election, candidate_id: candidate.id)}}= "Vote"
 
