--- a/app/views/candidates/new.html.haml
+++ b/app/views/candidates/new.html.haml
@@ -7,4 +7,4 @@
 
       = render 'form'
 
-      = link_to 'Back', organisation_election_candidates_path(current_organisation, @election)
+      = link_to 'Back', organisation_candidates_path(current_organisation)
