--- a/app/views/elections/_election.html.haml
+++ b/app/views/elections/_election.html.haml
@@ -4,9 +4,9 @@
       .col-md-8.text-left
         %h3= election.title
         - if election.end_date > Time.now
-          %p.small!= "Created by #{content_tag(:strong, User.find(election.created_by).name)} #{time_ago_in_words(election.created_at)} ago, finishing in #{content_tag(:strong, distance_of_time_in_words(Time.now, election.end_date))}."
+          %p.small-text= "Created by #{content_tag(:strong, User.find(election.created_by).name)} #{time_ago_in_words(election.created_at)} ago, finishing in #{content_tag(:strong, distance_of_time_in_words(Time.now, election.end_date))}.".html_safe
         - else
-          %p.small!= "Created by #{content_tag(:strong, User.find(election.created_by).name)} #{time_ago_in_words(election.created_at)} ago, finished #{content_tag(:strong, time_ago_in_words(election.end_date))} ago."
+          %p.small-text= "Created by #{content_tag(:strong, User.find(election.created_by).name)} #{time_ago_in_words(election.created_at)} ago, finished #{content_tag(:strong, time_ago_in_words(election.end_date))} ago.".html_safe
       - if election.end_date > Time.now
         .col-md-4.text-right
           %button.btn.btn-default.show_election_button{:type => "button"}= link_to 'Vote', [current_organisation, election]
