--- a/app/views/candidates/_form.html.haml
+++ b/app/views/candidates/_form.html.haml
@@ -15,13 +15,10 @@
   .field.form-group
     = f.label :avatar, "Picture"
     = f.file_field :avatar
-  .field.form-group
-    = f.label :elections, "Elections"
-    = f.file_field :elections
   - if current_organisation.elections.count > 0
-    %p Add/remove elections:
-    = f.label(:election_ids, 'Elections')
+    = f.label(:election_ids, 'Elections this candidate is a part of:')
     = f.select :election_ids, options_for_multiple_select(current_organisation.elections.pluck(:title), current_organisation.elections.pluck(:id)), {}, { multiple: true, size: 5 }
   .actions
     = f.submit 'Save', class: "btn btn-default"
-    %button.btn.btn-default{:type => "button"}= link_to 'Delete', [current_organisation, @election, @candidate], :method => :delete, :data => { :confirm => 'Are you sure?' }
+    - if @candidate.persisted?
+      %button.btn.btn-default{:type => "button"}= link_to 'Delete', [current_organisation, @election, @candidate], :method => :delete, :data => { :confirm => 'Are you sure?' }
