--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -1,7 +1,7 @@
 -# Rails flash messages styled for Bootstrap 3.0
 - flash.each do |name, msg|
   - if msg.is_a?(String)
-    .row
+    .row.flash_message_container
       .fixed
         .flash_messages
           %button{type: "button", class: "close", "data-dismiss": "alert", "aria-hidden": "true"}
