--- a/app/views/elections/show.html.haml
+++ b/app/views/elections/show.html.haml
@@ -6,9 +6,8 @@
           %h1= @election.title
           
         .col-sm-4
-          - if current_organisation.is_admin?(current_user)
-            %button.pull-right.btn.btn-default.show_election_button{:type => "button"}= link_to 'Edit election', edit_organisation_election_path(current_organisation, @election)
-      %p.small-text= "Created by #{content_tag(:strong, User.find(@election.created_by).name)} #{time_ago_in_words(@election.created_at)} ago".html_safe
+          %button.pull-right.btn.btn-default.show_election_button{:type => "button"}= link_to 'Edit election', edit_organisation_election_path(current_organisation, @election)
+      %p.small-text= "Created #{time_ago_in_words(@election.created_at)} ago".html_safe
       - if @election.candidates.count > 0
         %p.lead= @election.description
       - else
