--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -5,4 +5,4 @@
     = f.select(:role, ["user", "admin"], selected: current_organisation.is_admin?(user) ? "admin" : "user" )
     = f.submit 'Change Role', :class => 'button-xs'
 %td
-  = link_to("Delete user", user_path(user), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button-xs') unless user == current_user
+  = link_to("Delete user", user_path(user), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button-xs')
