Ready for lesson 5

--- a/app/assets/stylesheets/elections.scss
+++ b/app/assets/stylesheets/elections.scss
@@ -10,6 +10,14 @@
   }
 }
 
+.individual_election .col-md-4.text-right .show_election_button {
+  margin-top: 0px;
+}
+
+.individual_election .col-md-4.text-right {
+  color: blue;
+}
+
 .election_overview {
   margin-top: 50px;
 }
